creusot/tests/should_fail/prusti/blocked_lifetime/invariant1.stderr
error[creusot]: invalid dereference of expression with home `old` and lifetime `'a` at time-slice `'curr`
 --> invariant1.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

